--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link href="src/styles.css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -124,7 +124,7 @@
           </form>
         </div>
 
-      <script src="weather-project/index.js"></script>
+      <script src="index.js"></script>
     </div>
   </body>
 </html>
