--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         </div>
 
       <script src="index.js"></script>
+    <span id="GitHub_link"> <a href="https://github.com/palianytsia07/weather-project">open-source code</a> by Arina Rozhkova</span>
     </div>
   </body>
 </html>
