added css to "active" units

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <span id=current-conditions> Clear sky </span> <br/>
                         <span class="temperature" id="temperature">19</span
                         ><span class="units">
-                          <a href="#" id="celsius-link">°C</a> |
-                          <a href="#" id="fahrenheit-link">°F</a>
+                          <a href="#" id="celsius-link" class="active tepreature-unit">°C</a> |
+                          <a href="#" id="fahrenheit-link" class="tepreature-unit">°F</a>
                         </span>
                       </div>
                     </div>
@@ -66,12 +66,12 @@
                         <div class="conditions">
                     <div class="row">
                       <div class="col">
-                        Feels like: <span id=feels_like>0</span>°C
+                        Feels like: <span id="feels_like">0</span>°C
                       </div>
                     </div>
               <div class="row">
                 <div class="col">
-                   Humidity: <span id=humidity>57</span>%
+                   Humidity: <span id="humidity">57</span>%
                 </div>
               </div>
               <div class="row">
