--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="card card-body" style="width: 30rem;">
           <div class="row">
             <div class="col-1 sun">
-                  ☀️
+                <img src="" alt="Clear" id="icon" class="float-left" />
             </div>
             <div class="col-10">
-              <h1 id="city">Kyiv</h1>
+              <h1 id="city"> Kyiv</h1>
             </div>
           </div>
             <h6 class="time"> 
