removed fake forecast added css and html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="" alt="Clear" id="icon" class="float-left" />
             </div>
             <div class="col-10">
-              <h1 id="city"> Kyiv</h1>
+              <h1 id="city">Kyiv</h1>
             </div>
           </div>
             <h6 class="time"> 
@@ -83,43 +83,21 @@
               </div>
             </div>
             <br />
-
+            <div class="weather-forecast">
             <div class="row">
-              <div class="col">
-                Mon <br/>
-                ☀️ <br/>
-                30˚C
-              </div>
-              <div class="col">
-               Tue <br/>
-                ⛅️ <br/>
-                30˚C
-              </div>
-              <div class="col">
-               Wed <br/>
-                ☀️ <br/>
-                27˚C
-              </div>
-              <div class="col">
-                Thrs <br/>
-                ⛅️ <br/>
-                30˚C
-              </div>
-              <div class="col">
-               Fri <br/>
-               🌦 <br/>
-              30˚C
-              </div>
-              <div class="col">
-               Sat <br/>
-                ☀️ <br/>
-                28˚C
-              </div>
-              <div class="col">
-                Sun <br/>
-                🌦 <br/>
-                28˚C
-              </div>
+                <div class="col-2">
+                    <div class="weather-forecast-date">Thu</div>
+                    <img
+                      src="http://openweathermap.org/img/wn/50d@2x.png"
+                      alt=""
+                      width="42"
+                    />
+                    <div class="weather-forecast-temperatures">
+                      <span class="weather-forecast-temperature-max"> 18° </span>
+                      <span class="weather-forecast-temperature-min"> 12° </span>
+                    </div>
+                  </div>
+                </div>
             </div>
           </form>
         </div>
