--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                         <span id=current-conditions> Clear sky </span> <br/>
                         <span class="temperature" id="temperature">19</span
                         ><span class="units">
-                          <a href="#" id="celsius-link" class="active tepreature-unit">°C</a> |
-                          <a href="#" id="fahrenheit-link" class="tepreature-unit">°F</a>
+                          <a href="#" id="celsius-link" class="active tepreature-unit">°C</a>
                         </span>
                       </div>
                     </div>
